--- a/_sass/components/_keyboard.scss
+++ b/_sass/components/_keyboard.scss
@@ -1,5 +1,6 @@
 .ui-keyboard {
 	background: #2d3d78;
+	z-index: 100000;
 }
 
 .ui-state-default, 
