--- a/_sass/components/_layout.scss
+++ b/_sass/components/_layout.scss
@@ -12,7 +12,7 @@ main {
 
 footer {
 	position: relative;
-	z-index: 1000;
+	z-index: 10030;
 	height: 100px;
 	-webkit-box-shadow: 0px -1px 23px 1px rgba(0,0,0,0.18);
 	-moz-box-shadow: 0px -1px 23px 1px rgba(0,0,0,0.18);
