--- a/_sass/components/_panel.scss
+++ b/_sass/components/_panel.scss
@@ -1,7 +1,7 @@
 #panel, #right-panel {
 	position: absolute;
     top: 0;
-    z-index: 100;
+    z-index: 1050;
 
 	height: 100%;
 	//width: 25%;
@@ -45,6 +45,7 @@
 
 #right-panel {
 	right: 0px;
+	z-index: 1050;
 }
 
 #panel section>div:last-of-type,
@@ -78,5 +79,6 @@
     height: calc(100vh - 100px);
     background-color: rgba(0, 0, 0, 0.5);
     float: right;
+    z-index: 10000;
     
 }
